fixed alignment issues

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -180,12 +180,31 @@ html {
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.06);
 }
 
-.vertical__center,
+/*.vertical__center,
 .vertical__center__int > div{
 	position: relative;
- 	top: 30%;
+ 	top: 50%;
+}
+*/
+.vertical__center,
+.vertical__center__int {
+  display: flex;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
+.vertical__left,
+.vertical__left__int {
+  display: flex;
+  align-items: left !important;
+  justify-content: left !important;
+}
+
+.valign-middle{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 /*--------------------------- [1. Links] -------------------------------------------------------------------------------------*/
 
 a img {border: none; }
@@ -706,7 +725,7 @@ input { text-indent: 0px; }
 }
 
 .empty__state{
-  padding-bottom:60px;
+  height: 100%;
 }
 
 /*--------------------------- [6. Test Profile] --------------------------------------------------------------------------------*/
@@ -818,7 +837,7 @@ input { text-indent: 0px; }
 }
 
 .path-node-container {
-  height: 90px;
+  height: 100%;
   width:  90px;
   float: left;
 }
@@ -870,7 +889,7 @@ input { text-indent: 0px; }
 
 .path-bar{
   vertical-align: top;
-  height: 50%;
+  height: 1%;
   width: 30px;
   float: left;
 	border-bottom: 1px solid #eeeeee;
